--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Shared.LoginActivity"
+    tools:context=".shared.LoginActivity"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="24dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +19,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3">
+            android:layout_weight="2">
 
             <ImageView
                 android:id="@+id/logoImageView"
@@ -37,88 +39,74 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="36dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="5dp"
-            android:textColor="@color/black"
+            android:layout_marginBottom="16dp"
+            android:hint="@string/email_address"
             android:inputType="textEmailAddress"
-            android:textSize="20sp"
-            android:background="@drawable/login_input"
-            android:hint="@string/email_address"/>
+            style="@style/InputEditText"/>
 
         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:inputType="textPassword"
             android:hint="@string/password"
-            android:textSize="20sp"
-            android:background="@drawable/login_input"/>
+            android:inputType="textPassword"
+            style="@style/InputEditText" />
 
         <TextView
+            android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginBottom="32dp"
-            android:padding="5dp"
             android:text="@string/login"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:background="@drawable/login_button"
-            android:elevation="5dp"/>
+            style="@style/Button"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/registerTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:gravity="center"
+            android:padding="5dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/register_account"
-            android:textSize="14sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="24dp">
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/studentRegisterButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="5dp"
-                android:padding="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:text="@string/student"
-                android:textColor="@color/white"
-                android:background="@drawable/login_button"
-                android:elevation="5dp"/>
+                android:textSize="18sp"
+                style="@style/Button" />
 
             <TextView
+                android:id="@+id/instructorRegisterButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:layout_marginStart="5dp"
                 android:layout_marginEnd="10dp"
-                android:padding="10dp"
-                android:textColor="@color/white"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
                 android:text="@string/instructor"
-                android:background="@drawable/login_button"
-                android:elevation="5dp"/>
+                android:textSize="18sp"
+                style="@style/Button"/>
 
         </LinearLayout>
 
