--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".shared.folders.FoldersFragment">
+    tools:context=".shared.courses.CoursesFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/foldersRecyclerView"
+        android:id="@+id/coursesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,4 +22,4 @@
         app:srcCompat="@android:drawable/ic_input_add"
         android:tint="@color/white"/>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
