--- a/app/src/main/res/layout/fragment_alternative_answer.xml
+++ b/app/src/main/res/layout/fragment_alternative_answer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".student.AlternativeAnswerFragment">
+    tools:context=".student.answer.AlternativeAnswerFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
