--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,10 @@
         <item
             android:id="@+id/nav_profile"
             android:title="@string/profile" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:title="@string/logout" />
     </group>
 
 
