--- a/app/src/main/res/layout/activity_search_question.xml
+++ b/app/src/main/res/layout/activity_search_question.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".student.courses.JoinCourseActivity">
+    tools:context=".instructor.search.BrowseQuestionsActivity">
 
     <include
         android:id="@+id/toolbar"
