--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:title="@string/profile" />
 
         <item
+            android:id="@+id/nav_search"
+            android:title="@string/search" />
+
+        <item
             android:id="@+id/nav_logout"
             android:title="@string/logout" />
     </group>
